--- a/src/Page/Header/Header.css
+++ b/src/Page/Header/Header.css
@@ -1,10 +1,10 @@
- .background_bg{
-    background-color: rgb(5, 49, 49) !important;
-} 
- .background_bg a{
-    color: #ffffff !important;
-} 
-.svg_icon{
+.background_bg {
+  background-color: rgb(5, 49, 49) !important;
+}
+.background_bg a {
   color: #ffffff !important;
-  
+  font-weight: 700;
+}
+.svg_icon {
+  color: #ffffff !important;
 }
